# TabajarasInterview

./: .gitignore  README.md  TabajarasInterview.slnx  aspire.config.json
TabajarasInterview.Api/tabajaras-interview-api/: .gitignore  Cargo.toml  Dockerfile
TabajarasInterview.Api/tabajaras-interview-api/src/: main.rs
TabajarasInterview.Api/tabajaras-interview-api/src/auth/: extractor.rs  jwt.rs
TabajarasInterview.Api/tabajaras-interview-api/src/entities/: candidate_applications.rs  candidate_interview_answers.rs  candidate_interviews.rs  candidate_processes.rs  candidates.rs  interview_questions.rs  interview_reviewers.rs  interview_status.rs  interview_template_questions.rs  interview_templates.rs  interviews.rs  mod.rs  position_stacks.rs  position_status.rs  positions.rs  prelude.rs  process_status.rs  questions.rs  refresh_tokens.rs  stacks.rs  users.rs
TabajarasInterview.Api/tabajaras-interview-api/src/handlers/: auth.rs  candidate_applications.rs  candidates.rs  interview_questions.rs  interview_reviewers.rs  interviews.rs  mod.rs  position_stacks.rs  positions.rs  questions.rs  stacks.rs  users.rs
TabajarasInterview.AppHost/: AppHost.cs  TabajarasInterview.AppHost.csproj  appsettings.json
TabajarasInterview.AppHost/Properties/: launchSettings.json
TabajarasInterview.Web/: App.razor  Program.cs  Routes.razor  TabajarasInterview.Web.csproj  WeatherApiClient.cs  _Imports.razor  appsettings.json
TabajarasInterview.Web/Components/: App.razor  _Imports.razor
TabajarasInterview.Web/DTOs/: CandidateRequest.cs  (+12 more)
docs/: dashboard-analytics.md
(+69 files in other folders)
