[package]
name = "tabajaras-interview-api"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.9"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"

dotenvy = "0.15"
