[package]
name = "tabajaras-interview-api"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.8.9", features = ["macros"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"

dotenvy = "0.15"
bcrypt = "0.15"
chrono = "0.4"
validator = { version = "0.18", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"